# sds-api-gateway

./: .gitignore  README.md  dev.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: app.py  structs.py  utils.py
src/api/: comfy.py  comfy_msg_structs.py  groq.py  llm.py
src/api/comfy/: __init__.py  hdri.py  msg_structs.py  obj.py  shared.py
src/api/comfy/prompts/: panorama2.json  sketch23d_api_faster.json
src/prompts/: sketch23d_api.json
